--- a/public/index.html
+++ b/public/index.html
@@ -2,19 +2,17 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <meta name="viewport" content="width=device-width">
+    <title>Caleb's Tally Light</title>
+    <link rel="stylesheet" href="styles.css"/>
   </head>
   <body>
+
+    <div class="status"></div>
+
+
     <script src="/socket.io/socket.io.js"></script>
-    <script>
-      var id = prompt('enter your camera number')
-      var socket = io();
-      socket.on('update', function(state) {
-        if (state.program == id)
-          document.body.style = 'background: red'
-        else
-          document.body.style = 'background: white'
-      })
-    </script>
+    <script src="main.js"></script>
+
   </body>
 </html>
