--- a/public/tally.html
+++ b/public/tally.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
-<html class="cameraSelect">
+<html>
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Caleb's Tally Light</title>
-  <link rel="stylesheet" href="select-styles.css"/>
+  <link rel="stylesheet" href="styles.css"/>
   <link rel="stylesheet" href="font-awesome.css">
 </head>
 <body>
 
-  <a href="tally.html#1">1</a>
-  <a href="tally.html#2">2</a>
-  <a href="tally.html#3">3</a>
-  <a href="tally.html#4">4</a>
+  <div class="container"></div>
+
+  <script src="bundle.js"></script>
 
 </body>
 </html>
